# lead-build

./: .gitignore  Cargo.toml  README.md  mkdocs.yml  mkdocs_serve.sh  testfile.dnj
.github/workflows/: rust publish.yml
docs/: index.md
docs/builds/: 01-rules-and-builds.md  02-abstraction.md
docs/language/: 01-basics.md  02-expressions.md  03-list-compherension.md  04-list-operations.md  05-paths.md
docs/reference/: builtins.md  debugging.md  language.md
example/: lib.pbb  main.pbb  main_after.pbb  main_before.pbb  simpletest.pbb
example/subdir/: proxylib.pbb
src/: ast.rs  context.rs  datamodel.rs  debug.rs  expr.rs  grammar.lalrpop  grammar.pest  grammar.rs  immap.rs  lang.rs  lib.rs  main.rs  ninjaexpr.rs  ninjawriter.rs  parser.rs  path.rs  pbbuild.rs  value.rs
src/lang/: error.rs  expr.rs  grammar.lalrpop  immap.rs  parser.rs  stringdecode.rs  testvalue.rs
src/lang/expr/: export.rs  matcher.rs  tests.rs
tests/: ninja_fixture_runner.rs  parsing_fixture_runner.rs
tests/fixtures/ninja_cases/ninja_ok_default_top_only/: expect.toml  main.pbb
tests/fixtures/ninja_cases/ninja_ok_include_list/: expect.toml  sub.pbb
tests/fixtures/ninja_cases/ninja_ok_object_builds/: expect.toml  main.pbb
tests/fixtures/ninja_cases/ninja_ok_path_args/: expect.toml  main.pbb
tests/fixtures/ninja_cases/ninja_ok_single_build/: expect.toml  main.pbb
tests/fixtures/parsing_cases/err_custom_missing_include/: expect.toml  main.pbb
tests/fixtures/parsing_cases/err_parse_included/: bad.pbb  expect.toml  main.pbb
tests/fixtures/parsing_cases/ok_include_true/: main.pbb
(+13 files in other folders)
