[package]
name = "determinja"
version = "0.1.0"
edition = "2024"

[build-dependencies]
lalrpop = "0.23.1"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
lalrpop-util = { version = "0.23.1", features = ["lexer", "unicode"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
